--- a/home/templates/book_list.html
+++ b/home/templates/book_list.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% block list %}
+{% block content %}
 {% load crispy_forms_tags %}
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -24,4 +24,4 @@
             </div>
         </div>
     </div>
-{% endblock list %}
+{% endblock content %}
