--- a/home/templates/book_list2.html
+++ b/home/templates/book_list2.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% block list2 %}
+{% block content %}
 {% load crispy_forms_tags %}
 <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -39,4 +39,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock list2 %}
+{% endblock %}
