--- a/home/templates/team.html
+++ b/home/templates/team.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
         <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
-        <h1 class="mb-5">Expert Instructors</h1>
+        <h1 class="mb-5">Expert Librarians</h1>
     </div>
     <div class="row g-4">
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
