--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -8,14 +8,14 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="{% static 'img/favicon.icon' %}" rel="icon">
+    <link href="{% static 'img/favicon.ico' %}" rel="icon">
 
-    <!-- Google Web Fonts -->
+    <!-- Google Web 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheet -->
+     Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -73,29 +73,20 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
-        {% include 'about.html' %}
-        {% block about %}
-        {% endblock about %}
-
-    </div>
+    <!--div class="container-xxl py-5">
+    </div-->
     <!-- About End -->
 
 
-    <!-- Categories changes to book_list DB -->
+    <!-- Categories changes to book_list DB
     <div class="container-xxl py-5 category">
-    {% include 'book_list.html' %}
-    {% block list %}
-    {% endblock list %}
+   Book list
     </div>
+    -->
 
 
     <!-- #Courses change to books -->
-    <div class="container-xxl py-5">
-        {% include 'book_list2.html' %}
-        {% block list2 %}
-        {% endblock list2 %}
-    </div>
+    <!--Book list2-->
     <!-- Courses End -->
 
 
