--- a/home/templates/header.html
+++ b/home/templates/header.html
@@ -3,11 +3,12 @@
 {% load crispy_forms_tags %}
 <div class="owl-carousel header-carousel position-relative">
     <div class="owl-carousel-item position-relative">
-        <img class="img-fluid" src="{% static 'img/carousel-1.jpg' %}" alt="">
+        <img src="{% static 'img/must.jpg' %}" alt="" width="1366" height="768">
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
             <div class="container">
                 <div class="row justify-content-start">
                     <div class="col-sm-10 col-lg-8">
+                        <img src="{% static 'img/mustlogo.png' %}" height="200" width="100">
                         <h5 class="text-primary text-uppercase mb-3 animated slideInDown">MUST Maghufuri Library</h5>
                         <h1 class="display-3 text-white animated slideInDown">The Best e-Library Platform</h1>
                         <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
@@ -19,11 +20,12 @@
         </div>
     </div>
     <div class="owl-carousel-item position-relative">
-        <img class="img-fluid" src="{% static 'img/carousel-2.jpg' %}" alt="">
+        <img src="{% static 'img/images.jpg' %}" alt="" width="1366" height="768">
         <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
             <div class="container">
                 <div class="row justify-content-start">
                     <div class="col-sm-10 col-lg-8">
+                        <img src="{% static 'img/mustlogo.png' %}" width="100" height="200">
                         <h5 class="text-primary text-uppercase mb-3 animated slideInDown">MUST Maghufuri Library</h5>
                         <h1 class="display-3 text-white animated slideInDown">Get Educated Online From Your Home</h1>
                         <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
