--- a/home/templates/book_list2.html
+++ b/home/templates/book_list2.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
 {% load crispy_forms_tags %}
@@ -11,7 +12,7 @@
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="course-item bg-light">
                 <div class="position-relative overflow-hidden">
-                    <img class="img-fluid" src="{{ book.cover.url }}" alt="{{ book.title }}">
+                    <img src="{{ book.cover.url }}" alt="{{ book.title }}" height="300 px;">
                     <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                         <a href="{% url 'borrow_book' %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Borrow Book</a>
                         <a href="{% url 'register' %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
