--- a/home/templates/nav.html
+++ b/home/templates/nav.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% block nav %}
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-    <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+    <a href="{% url 'index' %}" class="nav-link scrollto active">
         <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>MUST e-Library</h2>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -9,16 +9,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
-            <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
-            <a href="{% url 'book_list' %}" class="nav-item nav-link">Books</a>
-            <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
+            <a href="{% url 'index' %}" class="nav-item nav-link scrollto active">Home</a>
+            <a href="{% url 'about' %}" class="nav-item nav-link scrollto active">About</a>
+            <a href="{% url 'book' %}" class="nav-item nav-link scrollto active">Books</a>
+            <a href="{% url 'login' %}" class="nav-item nav-link scrollto active">Login</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu fade-down m-0">
-                    <a href="{% url 'team' %}" class="dropdown-item">Our Team</a>
-                    <a href="{% url 'testimonial' %}" class="dropdown-item">Testimonial</a>
-                    <a href="{% url 'error' %}" class="dropdown-item">404 Page</a>
+                    <a href="{% url 'comment' %}" class="dropdown-item">Comments</a>
+                    <a href="{% url 'FAQs' %}" class="dropdown-item">FAQs</a>
+                    <a href="{% url 'about' %}" class="dropdown-item">About Us</a>
                 </div>
             </div>
             <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
